# csv2satyg

./: .gitignore  Makefile  README.md  csv2satyg.opam
.github/workflows/: ci.yml
demo/: textcolor-t.satyg  textcolor.csv  textcolor.satyg
src/: error.ml  error.mli  lex.mll  main.ml  optionState.ml  optionState.mli  parse.mly  showSATySFiType.ml  showSATySFiType.mli  types.ml
