opam-version: "2.0"
name: "csv2satyg"
version: "0.1.0"
maintainer: "puripuri2100"
authors: ["puripuri2100"]
synopsis: "Converts CSV file to SATySFi's package file"
description: """
Converts CSV file to SATySFi's package file
"""
license: "MIT"
homepage: "https://github.com/puripuri2100/csv2satyg"
bug-reports: "https://github.com/puripuri2100/csv2satyg/issues"
dev-repo: "git+https://github.com/puripuri2100/csv2satyg.git"
depends: [
  "ocamlfind"
  "ocaml" {>= "4.06.0"}
  "menhir"
]
build: [
  [make "-f" "Makefile" "build" "PREFIX=%{prefix}%"]
]
install: [
  [make "-f" "Makefile" "install" "PREFIX=%{prefix}%"]
]
